# remote-sensing-processor

./: .gitignore  .readthedocs.yaml  .travis.yml  CHANGES.md  CONTRIBUTING.md  MANIFEST.in  README.md  appveyor.yml  bld.bat  meta.yaml  pyproject.toml  setup.py  tox.ini
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml  labeler.yml
.github/ISSUE_TEMPLATE/: bug-report.yml  documentation.yml  feature-request.yml
.github/workflows/: labeler.yml  style.yml  tests.yml
conda-recipe/: bld.bat  meta.yaml
docs/: api.rst  conf.py  index.md  index.rst  install.md  install.rst  intro.md  quickstart.md  quickstart.rst  requirements.txt
docs/_static/logo/: logo.xcf
docs/api/: clip_values.rst  dem.rst  indices.rst  landsat.rst  match_hist.rst  mosaic.rst  normalize.rst  process.rst  rasterize.rst  regression.rst  replace.rst  segmentation.rst  semantic.rst  sentinel2.rst  tiles.rst
src/remote_sensing_processor/: __init__.py
src/remote_sensing_processor/common/: __init__.py  clip_values.py  common_functions.py  common_raster.py  dask.py  dataset.py  fill.py  match_hist.py  normalize.py  process.py  rasterize.py  replace.py  torch_test.py  types.py
src/remote_sensing_processor/common/normalize/: __init__.py  denormalize.py  get_normalization_params.py  normalize.py
src/remote_sensing_processor/dem/: __init__.py  aspect.py  curvature.py  hillshade.py  slope.py
src/remote_sensing_processor/image_segmentation/: models.py  segmentation.py  tiles.py
src/remote_sensing_processor/imagery/: __init__.py  indices.py  types.py
src/remote_sensing_processor/imagery/landsat/: __init__.py  dataset.py  landsat.py
src/remote_sensing_processor/imagery/sentinel2/: __init__.py  dataset.py  patches.py  sen2cor.py  sentinel2.py  superres.py
src/remote_sensing_processor/imagery_types/: types.py
src/remote_sensing_processor/indices/: __init__.py  normalized_difference.py  vegetation_index.py
src/remote_sensing_processor/landsat/: landsat.py
src/remote_sensing_processor/mosaic/: __init__.py  dataset.py  mosaic.py
src/remote_sensing_processor/postprocessing/: tiles.py
src/remote_sensing_processor/segmentation/: __init__.py  mapping.py  models.py  segmentation.py  tiles.py
src/remote_sensing_processor/segmentation/change_detection/: __init__.py  analysis.py  losses.py  mapping.py  metrics.py  models.py  segmentation.py  tiles.py
src/remote_sensing_processor/segmentation/instance/: __init__.py  analysis.py  losses.py  mapping.py  metrics.py  models.py  segmentation.py  tiles.py
src/remote_sensing_processor/segmentation/object_detection/: __init__.py  analysis.py  losses.py  mapping.py  metrics.py  models.py  segmentation.py  tiles.py
src/remote_sensing_processor/segmentation/panoptic/: __init__.py  analysis.py  losses.py  mapping.py  metrics.py  models.py  segmentation.py  tiles.py
src/remote_sensing_processor/segmentation/regression/: __init__.py  analysis.py  losses.py  mapping.py  metrics.py  models.py  segmentation.py  tiles.py
src/remote_sensing_processor/segmentation/semantic/: __init__.py  analysis.py  losses.py  mapping.py  metrics.py  models.py  tiles.py  (+1 more)
src/remote_sensing_processor/unzip/: unzip.py
tests/: conftest.py  landsat_test.py  test_landsat.py
tests/common/: __init__.py  test_clip_values.py  test_match_hist.py  test_normalize.py  test_process.py  test_rasterize.py  test_replace.py
tests/data_files/: DEM_toy_data.tif  ESA_WorldCover_toy_data.tif  ESA_WorldCover_toy_data_clip.gpkg  ESA_WorldCover_toy_data_clip1.gpkg  ESA_WorldCover_toy_data_clip2.gpkg  LC08_L2SP_005009_20150710_20200908_02_T2.tar  __init__.py  beijing.gpkg  brazil.gpkg  files.py  india.gpkg  landmask.gpkg  roma.gpkg
tests/dem/: __init__.py  test_aspect.py  test_curvature.py  test_hillshade.py  test_slope.py
tests/files/: roi.gpkg
tests/imagery/: __init__.py  landsat_fixtures.py  test_landsat.py  test_sentinel2.py
tests/indices/: __init__.py  test_vegetation_index.py
tests/mosaic/: __init__.py  test_mosaic.py
tests/segmentation/: __init__.py
tests/segmentation/change_detection/: __init__.py
tests/segmentation/instance/: __init__.py
tests/segmentation/object_detection/: __init__.py
tests/segmentation/panoptic/: __init__.py
tests/segmentation/regression/: __init__.py
tests/segmentation/semantic/: __init__.py
tests/segmentation/unsupervised/: __init__.py
tests/utils/: load_dem.py  load_landsat.py  load_lulc.py  load_sentinel2.py
(+14 files in other folders)
